[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Alex Lapitski <alexeylapitski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
alembic = "^1.14.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
orjson = "^3.10.15"
asyncpg = "^0.30.0"
structlog = "^25.1.0"
asgi-correlation-id = "^4.3.4"
werkzeug = "^3.1.3"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
faker = "^35.2.0"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
